Installing an Extension via dragging has no feedback #119500

Closed
opened 2024-03-15 10:55:29 +01:00 by Dalai Felinto · 2 comments

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-15 02:45, hash: 0b9ef9ee2a17
Worked: N/A

Short description of error
I would expect a notification when installing extensions from Disk by dragging them into Blender. Otherwise there is no feedback that the action was successful.

Exact steps for others to reproduce the error

  • Download an extension.
  • Drag into Blender.
  • Click on Install.
**Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-15 02:45, hash: `0b9ef9ee2a17` Worked: N/A **Short description of error** I would expect a notification when installing extensions from Disk by dragging them into Blender. Otherwise there is no feedback that the action was successful. **Exact steps for others to reproduce the error** * Download an [extension](https://extensions.blender.org/add-ons/flatterer/1.6.0-beta1/download/). * Drag into Blender. * Click on Install.
Dalai Felinto added the
Status
Needs Triage
Priority
Normal
Type
Report
Module
Python API
labels 2024-03-15 10:55:39 +01:00
Campbell Barton was assigned by Dalai Felinto 2024-03-15 10:55:48 +01:00
Germano Cavalcante added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-15 15:09:04 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-19 08:09:06 +01:00
Author
Owner

@ideasman42 thanks. With the hack removal, does it mean we can now have Install as “default”? (blue and activated if press enter)

@ideasman42 thanks. With the hack removal, does it mean we can now have Install as “default”? (blue and activated if press enter)

Yes, although it's using the default operator UI so it's called "OK" :)

Yes, although it's using the default operator UI so it's called "OK" :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119500
No description provided.