Fix #119500: Installing an Extension via dragging has no feedback

Call the install operators directly instead of using bpy.app.handlers.
Now reports from installing are in the status bar.